--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-twitter-embed": "^3.0.3",
     "url-loader": "^3.0.0"
   },
   "scripts": {
