--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "imageviewer": "^1.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^3.0.0",
     "react-infinite-scroller": "^1.2.4",
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.1.2",
