--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "^3.0.0",
+    "react-helmet": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.1.2",
