--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react-helmet": "^6.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-modal-image": "^2.5.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-twitter-embed": "^3.0.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "url-loader": "^3.0.0"
   },
   "scripts": {
