--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-twitter-embed": "^3.0.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "spinners-react": "^1.0.4",
     "url-loader": "^3.0.0"
   },
   "scripts": {
