--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0",
     "react-ga": "^3.0.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-modal-image": "^2.5.0",
     "react-redux": "^7.2.2",
